...
import androidx.core.net.toUri
import com.android.wildex.R
import com.android.wildex.model.utils.Location
import kotlinx.coroutines.launch

object PostDetailsActionsTestTags {
  const val SHEET = "action_sheet"
  const val BTN_GOOGLE_MAPS = "action_sheet_google_maps"
  const val BTN_COPY = "action_sheet_copy"
  const val BTN_SHARE = "action_sheet_share"
  const val BTN_DELETE = "action_sheet_delete"
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun PostDetailsActions(
    postLocation: Location?,
...
