...
object PostDetailsScreenTestTags {
  fun testTagForProfilePicture(profileId: String, role: String = ""): String {
    return if (role.isEmpty()) "ProfilePicture_$profileId" else "ProfilePicture_${role}_$profileId"
  }

  const val BACK_BUTTON = "backButton"
  const val DELETE_POST_DIALOG = "delete_post_dialog"
  const val DELETE_POST_CONFIRM_BUTTON = "delete_post_confirm_button"
  const val DELETE_POST_DISMISS_BUTTON = "delete_post_dismiss_button"
  const val PULL_TO_REFRESH = "pullToRefresh"
}

/**
 * Host composable for the Post Details screen.
 *
...

          var text by remember { mutableStateOf("") }

          OutlinedTextField(
              value = text,
              onValueChange = { text = it },
              placeholder = { Text(text = "Add a comment …", style = typography.bodyMedium) },
              modifier = Modifier.weight(1f),
              shape = RoundedCornerShape(32.dp),
              singleLine = true,
              keyboardOptions = KeyboardOptions(imeAction = ImeAction.Done),
              trailingIcon = {
                IconButton(
...
                        postDetailsScreenViewModel.addComment(text)
                        text = ""
                      }
                    }) {
                      Icon(
                          imageVector = Icons.AutoMirrored.Filled.Send,
                          contentDescription = "Send comment",
                          tint = colorScheme.primary,
                      )
                    }
              },
          )
        }
...
