...
import com.android.wildex.ui.utils.ClickableProfilePicture
import com.android.wildex.ui.utils.buttons.AnimatedLikeButton
import com.android.wildex.ui.utils.expand.ExpandableTextCore
import com.android.wildex.ui.utils.images.ImageWithDoubleTapLike

object PostDetailsContentTestTags {
  const val DESCRIPTION_TEXT = "post_details_description_text"
  const val DESCRIPTION_TOGGLE = "post_details_description_toggle"
  const val IMAGE_BOX = "image_box"
  const val DELETE_COMMENT_BUTTON = "delete_comment_button"
  const val COMMENT_BODY = "post_details_comment_body"
  const val COMMENT_TOGGLE = "post_details_comment_toggle"
  const val LIKES = "post_details_likes"
  const val LOCATION = "post_details_location"
  const val SPECIES = "post_details_species"
}
...
